--- a/src/public/mailTemplate/send_offer.ejs
+++ b/src/public/mailTemplate/send_offer.ejs
@@ -37,8 +37,14 @@
                     <h1 style="font-size:24px;margin:0 0 20px 0;font-family:Arial,sans-serif;">Hello, <%=
                         content.name %>
                     </h1>
-                    <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;"><%=
-                        content.message %></p>
+                    <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;">Congrats! You have been invited to <%=content.job_title %></p>
+                    <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;">Read more about the job below and submit a proposal if you are interested</p>
+                    <p style="margin:3rem 0; font-size:17px; line-height:24px; font-family:Poppins,sans-serif; text-align: center;">
+                      Business name <%= content.business_name %>
+                    </p>
+                    <p style="margin:3rem 0; font-size:17px; line-height:24px; font-family:Poppins,sans-serif; text-align: center;">
+                      Client name <%= content.client_name %>
+                    </p>
                   </td>
                 </tr>
               </table>
