profile image multer change

--- a/src/public/mailTemplate/send_offer.ejs
+++ b/src/public/mailTemplate/send_offer.ejs
@@ -40,10 +40,16 @@
                     <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;">Congrats! You have been invited to <%=content.job_title %></p>
                     <p style="margin:0 0 12px 0;font-size:16px;line-height:24px;font-family:Arial,sans-serif;">Read more about the job below and submit a proposal if you are interested</p>
                     <p style="margin:3rem 0; font-size:17px; line-height:24px; font-family:Poppins,sans-serif; text-align: center;">
+                     Job Description <%= content.job_description %>
+                    </p>
+                    <p style="margin:3rem 0; font-size:17px; line-height:24px; font-family:Poppins,sans-serif; text-align: center;">
                       Business name <%= content.business_name %>
                     </p>
                     <p style="margin:3rem 0; font-size:17px; line-height:24px; font-family:Poppins,sans-serif; text-align: center;">
                       Client name <%= content.client_name %>
+                    </p>
+                    <p style="margin:3rem 0; font-size:17px; line-height:24px; font-family:Poppins,sans-serif; text-align: center;">
+                      Budget <%= content.budget %>
                     </p>
                   </td>
                 </tr>
