--- a/src/public/mailTemplate/send_offer.ejs
+++ b/src/public/mailTemplate/send_offer.ejs
@@ -51,6 +51,12 @@
                     <p style="margin:3rem 0; font-size:17px; line-height:24px; font-family:Poppins,sans-serif; text-align: center;">
                       Budget <%= content.budget %>
                     </p>
+                    <p style="margin:0; font-size:17px; line-height:24px;font-family:Poppins,sans-serif; text-align: center; border: 0.1px solid #0080FF; border-radius: 10px; padding: 0.7rem 0; margin-bottom: 2rem; width: 75%; margin-left: auto; margin-right: auto;">
+                      <a href="<%= content.link %>"
+                        style="color:#0080FF;text-decoration:none; font-size: 17px;">
+                        Click here to Accept.
+                      </a>
+                    </p>
                   </td>
                 </tr>
               </table>
